2008-08-15  Derek R. Price  <derek@ximbiot.com>

	* update.c (send_dirent_proc): Another simplification via hasAdmin().

	* subr.c (has_slash): Rename to...
	(hasSlash): ...this.
	(hasAdmin): New convenience function.
	* subr.h (has_slash, hasSlash, hasAdmin): Update to match.
	* add.c (add): s/has_slash/hasSlash/.
	* client.c (send_dirent_proc): Use new hasAdmin() function.

	* subr.c (has_slash): New convenience function and...
	* subr.h (has_slash): ...its prototype.
	* add.c (add): Use new convenience function.

2008-03-23  Mark D. Baushke  <mdb@gnu.org>

	[bug #22710]
	* vers_ts.c (time_stamp): Use computed minimum mtime for symlink.
	(Patch suggested by Nelson B Bolyard <nelsonb@iname.com>.)

2008-03-10  Mark D. Baushke  <mdb@gnu.org>

	* mkmodules.c, parseinfo.c: Update copyright.

	* parseinfo.c (parse_config): Add support for new
	"IgnoreUnknownConfigKeys" configuration key.
	* mkmodules.c (config_contents): Add text about the
	"IgnoreUnknownConfigKeys" option.
	* sanity.sh (config): Test that IgnoreUnknownConfigKeys=yes works.

2008-01-30  Derek R. Price  <derek@ximbiot.com>

	* update.c (join_file): Use local copy to detect deletion conflicts,
	as opposed to the base revision.  Restore freeing of rev2 to its
	original location.  Use simpler conflict message.
	* sanity.sh: Update to compensate.

2008-01-29  Derek R. Price  <derek@ximbiot.com>
	    Paul Edwards  <fight.subjugation@gmail.com>

	* update.c (join_file): Detect deletion conflicts.
	* sanity.sh (join, join4): Adjusted for this fix.
	  (join8, join9): Add new tests for conflicts.

2008-01-27  Mark D. Baushke  <mdb@gnu.org>

	* client.c (start_rsh_server): Use CVS_SSH for the :extssh:
	method or fall back to "ssh" as set using the --with-ssh flag to
	configure.

	* client.h, log.c, main.c, recurse.c, root.c: Update copyright for
	2008.

2008-01-24  Mark D. Baushke  <mdb@gnu.org>

	* recurse.c (do_recursion): s/cvs_notfiy_check/cvs_notify_check/
	* edit.c (dummy_fileproc), edit.h, client.h: Ditto.