@@ -51,7 +51,6 @@ Name_Root (const char *dir, const char *update_dir)
 {
     FILE *fpin;
     cvsroot_t *ret;
-    const char *xupdate_dir;
     char *root = NULL;
     size_t root_allocated = 0;
     char *tmp;
@@ -60,24 +59,10 @@ Name_Root (const char *dir, const char *update_dir)
     int len;
 
     TRACE (TRACE_FLOW, "Name_Root (%s, %s)",
-	   dir ? dir : "(null)",
-	   update_dir ? update_dir : "(null)");
+	   TRACE_NULL (dir), TRACE_NULL (update_dir));
 
-    if (update_dir && *update_dir)
-	xupdate_dir = update_dir;
-    else
-	xupdate_dir = ".";
-
-    if (dir != NULL)
-    {
-	cvsadm = Xasprintf ("%s/%s", dir, CVSADM);
-	tmp = Xasprintf ("%s/%s", dir, CVSADM_ROOT);
-    }
-    else
-    {
-	cvsadm = xstrdup (CVSADM);
-	tmp = xstrdup (CVSADM_ROOT);
-    }
+    cvsadm = dir_append (dir, CVSADM);
+    tmp = dir_append (dir, CVSADM_ROOT);
 
     /*
      * Do not bother looking for a readable file if there is no cvsadm
@@ -104,7 +89,7 @@ Name_Root (const char *dir, const char *update_dir)
 	int saved_errno = errno;
 	/* FIXME: should be checking for end of file separately; errno
 	   is not set in that case.  */
-	error (0, 0, "in directory %s:", xupdate_dir);
+	error (0, 0, "in directory %s:", PRINT_UPDATE_DIR (update_dir));
 	error (0, saved_errno, "cannot read %s", CVSADM_ROOT);
 	error (0, 0, "please correct this problem");
 	ret = NULL;
@@ -123,7 +108,7 @@ Name_Root (const char *dir, const char *update_dir)
     ret = parse_cvsroot (root);
     if (ret == NULL)
     {
-	error (0, 0, "in directory %s:", xupdate_dir);
+	error (0, 0, "in directory %s:", PRINT_UPDATE_DIR (update_dir));
 	error (0, 0,
 	       "ignoring %s because it does not contain a valid root.",
 	       CVSADM_ROOT);
@@ -132,7 +117,7 @@ Name_Root (const char *dir, const char *update_dir)
 
     if (!ret->isremote && !isdir (ret->directory))
     {
-	error (0, 0, "in directory %s:", xupdate_dir);
+	error (0, 0, "in directory %s:", PRINT_UPDATE_DIR (update_dir));
 	error (0, 0,
 	       "ignoring %s because it specifies a non-existent repository %s",
 	       CVSADM_ROOT, root);
